Fix grid stretching

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -308,6 +308,7 @@ section {
   }
 }
 
+// References
 .references {
   margin-top: 80px;
   margin-bottom: 80px;
@@ -317,22 +318,157 @@ section {
   padding: 32px 40px;
   display: flex;
   flex-direction: row;
-  gap: 8px;
+  flex-wrap: wrap;
+  gap: 16px;
   justify-content: space-between;
 
   p {
     font-size: 1.75rem;
+    flex: 2;
   }
 
   .gallery {
     display: flex;
-    justify-content: flex-end;
-    flex-wrap: no-wrap;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 32px;
-    flex-grow: 2;
+    flex: 4;
 
     img {
       max-width: 100px;
+    }
+  }
+}
+
+// Image with text right
+.imageTextRight {
+  padding-top: 80px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  gap: 80px;
+
+  .text {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    h2 {
+      font-size: 3.75rem;
+    }
+
+    p {
+      font-size: 1.25rem;
+      line-height: 2rem;
+    }
+  }
+
+  .image {
+    flex: 1;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 560px;
+    min-width: 480px;
+  }
+}
+
+// Image with test left - image align right
+.imageTextLeft {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  gap: 80px;
+
+  .text {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    h2 {
+      font-size: 3.75rem;
+    }
+
+    p {
+      font-size: 1.25rem;
+      line-height: 2rem;
+    }
+  }
+
+  .image {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 560px;
+    min-width: 480px;
+  }
+}
+
+// USP Section
+.uspGrid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: auto;
+  align-items: start;
+  padding-bottom: 136px;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    align-self: stretch;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-family: $sanserif;
+    font-weight: 500;
+    padding-bottom: 16px;
+  }
+
+  .cell {
+    border-top: 1px solid #bfc1b9;
+    padding-top: 32px;
+    padding-right: 56px;
+    display: flex;
+    gap: 24px;
+
+    p {
+      padding-bottom: 16px;
+    }
+
+    .cellBodyWrapper {
+      display: flex;
+      flex-direction: column;
+
+      .cellBody {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .cellLink {
+        margin-top: auto;
+        font-weight: 700;
+        display: flex;
+        gap: 8px;
+        align-items: center;
+      }
     }
   }
 }
